# recruity-ai

./: .gitignore  AGENTS.md  README.md  package.json
apps/api/: README.md  pyproject.toml
apps/api/app/: config.py  main.py  middleware.py
apps/api/app/routers/: health.py
apps/api/app/routes/v1/: hello.py
